--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Hyperspace by HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">About me</a></li>
-							<li><a href="#two">Experience</a></li>
+							<li><a href="#one">Experience</a></li>
+							<li><a href="#two">Technology</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -34,9 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Sawyer Santella</h1>
+							<p>Just another student studying Computer Science at the University of Michigan...</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -49,8 +48,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sawyer Santella</h2>
-									<p>//add stuff here about yourself</p>
+									<h2></h2>
+									<p>Stuff about me</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -61,8 +60,8 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Experience:</h2>
-									<p>// add subheading for project 1, Zelda // then add information about your contributions and technology used // also add link to web build</p>
+									<h2>Legend of Zelda</h2>
+									<p> I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -130,7 +129,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>// maybe add stuff here about being open to work or whatever // </p>
+<!-- 							<p>// maybe add stuff here about being open to work or whatever // </p> -->
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
