--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-						<section>
+<!-- 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -55,7 +55,7 @@
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section> -->
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
