--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-<!-- 						<section>
+						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2></h2>
-									<p>Stuff about me</p>
+									<h2>Legend of Zelda</h2>
+									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
-						</section> -->
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Legend of Zelda</h2>
-									<p> I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio.</p>
+									<h2></h2>
+									<p></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
