--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+<!-- 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a> -->
 							<div class="content">
 								<div class="inner">
 									<h2></h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+<!-- 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a> -->
 							<div class="content">
 								<div class="inner">
 									<h2>Ultricies aliquam</h2>
