--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Legend of Zelda</h2>
-									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. <a href="https://sawyersantella.itch.io/legend-of-zelda">Play Zelda</a></p>
+									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. <a href="https://sawyersantella.itch.io/legend-of-zelda">Play Zelda Here</a></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
