--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <!-- 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2></h2>
-									<p></p>
+									<h2>Forest Madness</h2>
+									<p>I designed and implemented this game entirely by myself. The artwork and music is not my own. <a href="https://sawyersantella.itch.io/forest-madness">Play Here</a></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
