--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2></h2>
+									<h2>Seed of Hope</h2>
 									<p></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
