--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Seed of Hope</h2>
-									<p></p>
+									<p>For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. I designed levels 1, 2, and 6, as well as implemented the yellow buttons, the torch checkpoints, and the obsidian bridge mechanic. Seed of Hope is a puzzle-platform multiplayer game where two players traverse through a barren landscape to find the key to life hidden deep in the desert. Wield your trusty flashlight and hose to solve puzzles, grow plants, and dodge dangers that block your path. <a href="https://sawyersantella.itch.io/seed-of-hope">Play Here</a></p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
