--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Experience</a></li>
-							<li><a href="#two">Technology</a></li>
-							<li><a href="#three">Get in touch</a></li>
+<!-- 							<li><a href="#two">Technology</a></li> -->
+							<li><a href="#two">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,9 +36,9 @@
 						<div class="inner">
 							<h1>Sawyer Santella</h1>
 							<p>Just another student studying Computer Science at the University of Michigan...</p>
-							<ul class="actions">
+<!-- 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
@@ -50,9 +50,9 @@
 								<div class="inner">
 									<h2>Legend of Zelda</h2>
 									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. <a href="https://sawyersantella.itch.io/legend-of-zelda">Play Zelda Here</a></p>
-									<ul class="actions">
+<!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</section>
@@ -62,9 +62,9 @@
 								<div class="inner">
 									<h2>Forest Madness</h2>
 									<p>I designed and implemented this game entirely by myself. The artwork and music is not my own. <a href="https://sawyersantella.itch.io/forest-madness">Play Here</a></p>
-									<ul class="actions">
+<!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</section>
@@ -74,16 +74,16 @@
 								<div class="inner">
 									<h2>Seed of Hope</h2>
 									<p>For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. I designed levels 1, 2, and 6, as well as implemented the yellow buttons, the torch checkpoints, and the obsidian bridge mechanic. Seed of Hope is a puzzle-platform multiplayer game where two players traverse through a barren landscape to find the key to life hidden deep in the desert. Wield your trusty flashlight and hose to solve puzzles, grow plants, and dodge dangers that block your path. <a href="https://sawyersantella.itch.io/seed-of-hope">Play Here</a></p>
-									<ul class="actions">
+<!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</section>
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+<!-- 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -123,10 +123,10 @@
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+				<!-- Two -->
+					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 <!-- 							<p>// maybe add stuff here about being open to work or whatever // </p> -->
@@ -154,12 +154,12 @@
 								</section>
 								<section>
 									<ul class="contact">
-										<li>
+<!-- 										<li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Email</h3>
 											<a href="#">santella@umich.edu</a>
@@ -168,7 +168,7 @@
 											<h3>Phone</h3>
 											<span>(313) 920-1706</span>
 										</li>
-										<li>
+<!-- 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -177,7 +177,7 @@
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
-										</li>
+										</li> -->
 									</ul>
 								</section>
 							</div>
