--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Sawyer Santella</h1>
-							<p>Just another student studying Computer Science at the University of Michigan...</p>
-<!-- 							<ul class="actions">
+							<p>Hello, and welcome to my portfolio site! Here I have my most recent projects documented, including several original games. Outside of computer science, I am passionate about sociocultural anthropology, creative writing, and ____ // what to add here? // </p>
+							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul> -->
+							</ul>
 						</div>
 					</section>
 
@@ -168,16 +168,16 @@
 											<h3>Phone</h3>
 											<span>(313) 920-1706</span>
 										</li>
-<!-- 										<li>
+										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+<!-- 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+<!-- 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+<!-- 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
-										</li> -->
+										</li>
 									</ul>
 								</section>
 							</div>
