--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Sawyer Santella</h1>
-							<p>Hello, and welcome to my portfolio site! Here I have my most recent projects documented, including several original games. Outside of computer science, I am passionate about sociocultural anthropology, creative writing, and ____ // what to add here? // </p>
+							<p>Hello, and welcome to my portfolio site! Here I have my most recent projects documented, including several original games. Outside of computer science, I am passionate about sociocultural anthropology, creative writing, and history. // </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
