--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Sawyer Santella</h1>
-							<p>Hello, and welcome to my portfolio site! Here I have my most recent projects documented, including several original games. Outside of computer science, I am passionate about sociocultural anthropology, creative writing, and history. // </p>
+							<p>Hello, and welcome to my portfolio site! Here I have my most recent projects documented, including several original games. In addition to game development, I am interested in web development, cyber security, and computer networking. Outside of computer science, I am passionate about sociocultural anthropology, creative writing, and analog/vintage technology. </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -45,11 +45,11 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-<!-- 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
+<!-- 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2>Legend of Zelda</h2>
-									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. <a href="https://sawyersantella.itch.io/legend-of-zelda">Play Zelda Here</a></p>
+									<h2>Seed of Hope</h2>
+									<p>For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. I designed levels 1, 2, and 6, as well as implemented the yellow buttons, the torch checkpoints, and the obsidian bridge mechanic. Seed of Hope is a puzzle-platform multiplayer game where two players traverse through a barren landscape to find the key to life hidden deep in the desert. Wield your trusty flashlight and hose to solve puzzles, grow plants, and dodge dangers that block your path. <a href="https://sawyersantella.itch.io/seed-of-hope">Play Here</a></p>
 <!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
@@ -61,7 +61,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Forest Madness</h2>
-									<p>I designed and implemented this game entirely by myself. The artwork and music is not my own. <a href="https://sawyersantella.itch.io/forest-madness">Play Here</a></p>
+									<p>I designed and implemented this game entirely by myself, utilizing Unity and C# scripting. The artwork and music is not my own. <a href="https://sawyersantella.itch.io/forest-madness">Play Here</a></p>
 <!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
@@ -69,11 +69,11 @@
 							</div>
 						</section>
 						<section>
-<!-- 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a> -->
+<!-- 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2>Seed of Hope</h2>
-									<p>For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. I designed levels 1, 2, and 6, as well as implemented the yellow buttons, the torch checkpoints, and the obsidian bridge mechanic. Seed of Hope is a puzzle-platform multiplayer game where two players traverse through a barren landscape to find the key to life hidden deep in the desert. Wield your trusty flashlight and hose to solve puzzles, grow plants, and dodge dangers that block your path. <a href="https://sawyersantella.itch.io/seed-of-hope">Play Here</a></p>
+									<h2>Legend of Zelda</h2>
+									<p>I designed the Custom level, developed the core of the Bowling Ball mechanic, worked on Link's animation, as well as implemented half the enemies and weapons. For this project, I used Unity to design and develop the game, and I programmed all scripts in C# using Visual Studio. <a href="https://sawyersantella.itch.io/legend-of-zelda">Play Zelda Here</a></p>
 <!-- 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
@@ -132,32 +132,11 @@
 <!-- 							<p>// maybe add stuff here about being open to work or whatever // </p> -->
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
 									<ul class="contact">
 <!-- 										<li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											Nashville, MI 00000-0000<br />
 											USA</span>
 										</li> -->
 										<li>
@@ -168,16 +147,16 @@
 											<h3>Phone</h3>
 											<span>(313) 920-1706</span>
 										</li>
-										<li>
+<!-- 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 <!-- 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 <!-- 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+<!-- 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 <!-- 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
+<!-- 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+<!-- 											</ul> -->
+<!-- 										</li> --> -->
 									</ul>
 								</section>
 							</div>
